# MUSE_OS

./: .bumpversion.cfg  .codespell_ignore.txt  .dockerignore  .editorconfig  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  azure-pipelines.yml  codecov.yml  muse_dir.spec  muse_file.spec  muse_win.spec  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  usage-support.md
.github/bkp/: remove_old_artifacts.yml
.github/workflows/: broken-link-check.yml  ci.yml  documentation.yml  legacy-tests.yml  pre-commit_autoupdate.yml  publish.yml  regression-tests.yml  regression_tests.yml  remove_old_artifacts.yml  unit-tests.yml
docs/: .index.rst.icloud  add-solar.html  api 2.html  api.rst  application-flow.rst  conf.py  customise-muse 2.html  customise-muse.ipynb  developer-guide.rst  example-output 2.html  example-output.ipynb  example-results.html  example-results.rst  faq 2.html  faq.rst  genindex 2.html  getting-help.rst  glossary.html  glossary.rst  index.html  index.rst  installation.rst  installing-muse.html  installing-muse.rst  installing-running.html  installing-running.rst  muse-components.html  muse-components.rst  objects.inv  overview 2.html  overview 2.rst  overview.rst  py-modindex 2.html  requirements.txt  running-muse-example 3.html  running-muse-example 4.html  running-muse-example.ipynb  search.html  searchindex.js  settings.toml  (+2 more)
docs/Results/: MCACapacity.csv  MCAPrices.csv
docs/_modules/: index 2.html  pathlib.html  typing.html
docs/_sources/: example-results.rst.txt  example-reuslts.rst.txt  glossary.rst.txt  index.rst.txt  installing-running.rst.txt  running-muse-example.ipynb.txt
docs/advanced-guide/: .gitignore  api.html  api.rst  extending-muse 2.ipynb  extending-muse.html  extending-muse.ipynb  further-extending-muse.html  further-extending-muse.ipynb  hooks.html  index.html  index.rst  mynewfunctions.py  testing-outputs.html  testing-outputs.ipynb
docs/developer_guide/: api.rst  tutorial.rst
docs/examples/: add-agent 2.html  add-region.html  add-region.ipynb  add-solar 2.html  add-solar 2.ipynb  addition-service-demand 2.html  index.rst  modify-timing-data.html  modify-timing-data.ipynb
docs/figures/: time-horizon.graffle
docs/input/: BaseYearExport.csv  BaseYearImport.csv  Projections.csv
docs/inputs/: agents.html  agents.rst  api 2.html  commodities.html  commodities.rst  commodities_io.html  commodities_io.rst  correlation_files 2.rst  correlation_files.html  correlation_files.rst  csv.html  existing_capacity 2.html  existing_capacity.rst  index.html  index.rst  inputs_csv 2.html  inputs_csv.rst  preset_commodity_demands.rst  projections.html  projections.rst  regions 2.rst  regions.html  regions.rst  technodata.html  technodata.rst  technodata_timeslices.rst  timeslices.html  timeslices.rst  toml.html  toml.rst  toml_primer.html  toml_primer.rst
docs/installation/: alternative-installation.rst  developers.rst  index.rst  normal-installation.rst  pipx-based.rst  standalone-muse.rst  virtual-env-based.rst
docs/model/: agents.rst  index.rst  mca.rst  overview.rst  quantities.rst  sectors.rst
docs/release-notes/: index.rst  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.5.0.md  v1.5.1.md  v1.5.2.md  v1.5.3.md  v1.5.4.md  v1.5.5.md  v1.5.6.md  v1.6.0.md
docs/source/: modules 3.rst  modules.html  muse.agents 2.html  muse.agents.rst  muse.html  muse.outputs.html  muse.outputs.rst  muse.readers.html  muse.rst  muse.sectors.html  muse.sectors.rst
docs/technodata/: Agents.csv
docs/tutorial-code/: Untitled.html  Untitled.ipynb  generate_models.py  run_models.py
docs/user-guide/: add-agent.html  add-agent.ipynb  add-gdp-correlation-demand 2.html  add-gdp-correlation-demand 2.ipynb  add-gdp-correlation-demand.ipynb  add-region.html  add-region.ipynb  add-solar.html  add-solar.ipynb  addition-service-demand.html  addition-service-demand.ipynb  additional-service-demand.ipynb  carbon-budget.ipynb  index.html  index.rst  min-max-timeslice-constraints.ipynb  modify-timing-data.html  modify-timing-data.ipynb  subsectors.ipynb  trade.ipynb
docs/user_guide/: index.rst  inputs.rst  outputs.rst  quick-start.rst
docs_1/: bibliography 2.bib  bibliography 2.rst  conf.py  index 2.rst
docs_1/developer_guide/: api.rst  index.rst
docs_1/user_guide/: index 4.rst  quick-start 2.rst
run/: default_settings.toml
src/muse/: .carbon_budget.py.icloud  .hooks.py.icloud  .interactions.py.icloud  .production.py.icloud  .registration.py.icloud  __init__.py  __main__.py  agent.py  carbon_budget 3.py  carbon_budget.py  commodities.py  conftest.py  constraints 2.py  constraints.py  costs.py  decisions.py  decorators.py  defaults.py  demand_matching.py  hooks.py  (+22 more)
tests/: .test_agents.py.icloud  .test_aggregoutput.py.icloud  .test_decisions.py.icloud  .test_filters.py.icloud  .test_investments.py.icloud  .test_sector.py.icloud  conftest 2.py  conftest.py  test_agents 2.py  test_agents.py  test_aggregoutput.py  test_carbon_budget.py  test_commodity.py  test_constraints.py  test_costs.py  test_csv_readers.py  test_decisions.py  test_demand_matching.py  test_demand_share.py  test_dispatch.py  test_docs_notebooks.py  test_filters 2.py  test_filters.py  test_fullsim_regression.py  test_interactions 3.py  test_interactions.py  test_investments.py  test_legacy_sector.py  test_mca.py  test_mca_outputs.py  test_minimum_service.py  test_new_readers.py  test_objectives.py  test_outputs 3.py  test_outputs.py  test_presets.py  test_production_outputs.py  test_quantities 2.py  test_quantities.py  test_read_csv.py  (+11 more)
website/: add-solar.ipynb  customise-muse.html  example-output.html  example-results.html  example-reuslts.html  genindex.html  index.html  installing-muse.html  muse-components.html  objects.inv  overview.html  running-muse-example.html  running-muse-example.ipynb  search.html  searchindex.js  simulation-settings.html
(+2762 files in other folders)
