[bumpversion]
current_version = 0.9.1
commit = True
tag = True

[metadata]
name = StarMUSE
version = attr: src.muse.VERSION
description = Energy System Model
classifiers = 
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3.8
	Intended Audience :: Science
	Intended Audience :: Research
	Intended Audience :: Economists
	Intended Audience :: Energy Experts
	Intended Audience :: Climate Mitigation Experts
	Intended Audience :: Industry
keywords = ["energy", "modelling"]
author = Sustainable Gas Institute
author_email = sgi@imperial.ac.uk
url = http://www.sustainablegasinstitute.org/home/muse-energy-model/

[options]
python_requires = >= 3.7
package_dir = 
	=src
packages = find:
include_package_data = True
install_requires = 
	numpy
	scipy
	pandas<=1.3
	click
	xarray<=0.16
	bottleneck
	coloredlogs
	toml
	xlrd==1.2.0
	mypy-extensions

[options.packages.find]
where = src

[options.package_data]
* = **/*.toml, **/*.csv

[options.extras_require]
all = 
	%(dev)s
	%(doc)s
	%(excel)s
dev = 
	pytest>4.0.2
	flake8!=3.8.1,!=3.8.0,<4.0.0
	black
	pytest-flake8
	IPython
	jupyter
	nbconvert
	nbformat
	mypy
	numpy>=1.17
	pytest-xdist
	bump2version
doc = 
	sphinx
	myst-parser
	nbsphinx
	sphinxcontrib-bibtex
	ipython
	ipykernel
excel = 
	openpyxl
private_sgi_model = 
	SGIModelData @ git+https://github.com/SGIModel/SGIModelData.git@master
	StarMUSELegacy @ git+https://github.com/SGIModel/StarMuse.git@archive/legacy

[bumpversion:file:src/muse/__init__.py]

[bumpversion:file:docs/conf.py]

[pyls]
configurationSources = ['flake8']

[aliases]
test = pytest

[tool:pytest]
testpaths = tests src/muse
addopts = --doctest-modules --flake8 -rfE -n auto
markers = 
	sgidata: test that require legacy data
	legacy: test that require legacy modules
	regression: a regression test
	notebook: a test which consist in running a jupyter notebook

[pycodestyle]
max-line-length = 88
ignore = E203,W503

[flake8]
max-line-length = 88
exclude = 
	.tox,
	.git,
	build,
	__pycache__,
ignore = E203,W503

[build_sphinx]
project = 'MUSE'
version = attr: src.muse.VERSION
release = attr: src.muse.VERSION
source-dir = docs
build-dir = docs/build
